<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RGB Color Challenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="rules_infos">Informations and rules</string>
    <string name="score">Score</string>
    <string name="play_again">Try again</string>
    <string name="share">Share</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="next">Next</string>
    <string name="rgb">rgb(%1$d, %2$d, %3$d)</string>
    <string name="your_score">Your score : %1$d</string>
    <string name="final_score">Final score : %1$d</string>
    <string name="share_body">I got %1$d point(s) in the RGB Color Challenge ! %2$s</string>
    <string name="about_text">%1$s version %2$s developed by tiwence</string>
    <string name="new_highscore">Congratulations ! New highscore !</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="signin_failure">Failed to sign in.</string>
    <string name="signin_other_error">Failed to sign in. With unknown error.</string>
    <string name="share_subject">My score on RGB Color Challenge game!</string>
    <string name="share_app_subject">RGB Color Challenge game!</string>
    <string name="review">Add review</string>
    <string name="contact">Contact</string>
    <string name="share_via">Share via</string>
    <string name="contact_via">Contact via</string>
    <string name="wikipedia_rules">From Wikipedia : The RGB color model is an additive color model in which red, green, and blue light are added together in various ways to reproduce a broad array of colors. The name of the model comes from the initials of the three additive primary colors, red, green, and blue. \n\nIn computers, the component values are often stored as integer numbers in the range 0 to 255. \n\n (255, 0, 0) : perfect red\n(0, 255, 0) : perfect green\n(0, 0, 255) : perfect blue\n\n So, the rules of the game are very simple : you have to find the right color, most often as a result, according to his RGB value specified between the brackets. </string>
    <string name="contact_subject">Email about RGB Color Challenge app</string>

    <string-array name="good_answer_sentences">
        <item>Good!!</item>
        <item>Well done :)</item>
        <item>Come on!!</item>
        <item>Great!</item>
        <item>Amazing!</item>
        <item>Show must go on?</item>
        <item>Unstoppable!!</item>
        <item>This is madness?!</item>
    </string-array>
    <string-array name="bad_answer_sentences">
        <item>Fuck it :(</item>
        <item>Damned!</item>
        <item>Oooooh... :(</item>
        <item>Too bad... :\'(</item>
        <item>Try again!</item>
        <item>Next time!</item>
    </string-array>

</resources>