<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/textViewAboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAboutHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/aboutMenuButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonShareApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:background="@drawable/background_share_button"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/share"
            android:textColor="@color/light_red" />

        <Button
            android:id="@+id/buttonReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_review_button"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/review"
            android:textColor="@color/light_green" />

        <Button
            android:id="@+id/buttonContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_contact_button"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/contact"
            android:textColor="@color/light_blue" />
    </LinearLayout>

</RelativeLayout>